------------------------------------------------------
Release 0 | Beta 0 | Development 1 | Experimental 1

* Added FileUtils
* Added FileUtilsTest
* Added ThreadUtils
* Added ArrayUtils

------------------------------------------------------
Release 0 | Beta 0 | Development 1 | Experimental 0

* Added Settings
* Added Window
* Added WindowTest
* Added GameLoopInterface
* Added GameLoop
* Added BaseGame
* Added BaseGameTest
* Added Log
* Added Logger
* Added Time

* Created the package org.andor.core
* Created the package org.andor.core.logger
* Created the package org.andor.utils
* Created the package org.andor.tests


------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 4

* Added Time
* Added time to a log
* Added variables in Logger to allow for certain parts of the log such as time to be disabled

* Changed over the Source and Log Type when outputting Logs

* Created the package org.andor.utils

------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 3

* Added Log
* Added Logger

* Created the package org.andor.core.logger

------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 2

* Added GameLoopInterface
* Added GameLoop
* Added BaseGame
* Added BaseGameTest

------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 1

* Added Settings
* Added Window
* Added WindowTest

* Created the package org.andor.core
* Created the package org.andor.tests