@@ -17,7 +17,7 @@ public class Settings {
 		/* The build of Andor */
 		public static final String BUILD = "Experimental";
 		/* The date this build started development */
-		public static final String DATE = "13/07/2014";
+		public static final String DATE = "14/07/2014";
 	}
 	
 	/* The static class containing all of the settings required for the window */
