@@ -1,4 +1,14 @@
 ------------------------------------------------------
+Release 0 | Beta 0 | Development 1 | Experimental 2
+
+* Added Timer
+* Added TimerTest
+* Added Console
+* Added FPSCalculator
+* Added the method getDelta() to GameLoop
+* Added the method getFPS() to GameLoop
+
+------------------------------------------------------
 Release 0 | Beta 0 | Development 1 | Experimental 1
 
 * Added FileUtils
